--- a/vue-practice/vue-learn-demo/package.json
+++ b/vue-practice/vue-learn-demo/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
-    "shen"
+    "vue"
   ],
   "author": "shendekuan",
   "license": "ISC"
